Added resources page, sample entry
This isn't powered by a database or anything, just raw HTML babeyyyyyy

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -32,15 +32,24 @@
         </nav>
     </header>
 
-    <main class="container" id="initiativesPage">
+    <main class="container" id="resourcesPage">
         <div class="row">
             <h2 class="col">Resources and Further Reading</h2>
         </div>
         <div class="row">
-            <div class="col" id="initiativesPart1">
-                
+            <div class="col resource">
+                <div class="row">
+                    <span class="col">
+                        <h4 class="resource-title">ResourceName</h5>
+                            <p class="resource-subtitle">A helpful resource for XYZ.</p>
+                    </span>
+                    <span class="col-lg-3">
+                        <a class="resource-button" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Go to Resource</a>
+                        <small class="resource-subtitle">Opens in new tab</small>
+                    </span>
+                </div>
             </div>
-            <div class="col" id="initiativesPart2">
+            <div class="col resources">
             </div>
         </div>
     </main>
