Added functional header links to all pages

--- a/pages/data.html
+++ b/pages/data.html
@@ -23,24 +23,28 @@
         <!-- Header -->
         <img src="../rsc/Georgian_College_logo.svg" alt="Georgian college logo" class="logo m-3">
         <nav>
-            <a href="#" class="badge rounded-pill">Initiatives</a>
-            <a href="#" class="badge rounded-pill">Emissions Map</a>
-            <a href="#" class="badge rounded-pill">Resources</a>
+            <a href="initiatives.html" class="badge rounded-pill">Initiatives</a>
+            <a href="data.html" class="badge rounded-pill">Emissions Map</a>
+            <a href="resources.html" class="badge rounded-pill">Resources</a>
             <a href="#" class="badge rounded-pill">Blog</a>
             <a href="#" class="badge rounded-pill">About</a>
-            <a href="#" class="badge rounded-pill">Contact Us</a>
+            <a href="contact.html" class="badge rounded-pill">Contact Us</a>
         </nav>
     </header>
 
     <main class="row">
         <div class="col">
             <h2>About the Emissions Data</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore mollitia officiis praesentium? Non, nam! Distinctio alias porro ratione neque commodi saepe obcaecati maiores, eligendi cum enim dolorem totam sapiente?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore mollitia officiis praesentium?
+                Non, nam! Distinctio alias porro ratione neque commodi saepe obcaecati maiores, eligendi cum enim
+                dolorem totam sapiente?</p>
         </div>
         <div class="col">
             <h2>How to Read/Use</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore mollitia officiis praesentium? Non, nam!
-                Distinctio alias porro ratione neque commodi saepe obcaecati maiores, eligendi cum enim dolorem totam sapiente?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore mollitia officiis praesentium?
+                Non, nam!
+                Distinctio alias porro ratione neque commodi saepe obcaecati maiores, eligendi cum enim dolorem totam
+                sapiente?</p>
         </div>
         <table class="col-12 table table-primary table-striped">
             <thead>
