--- a/pages/initiatives.html
+++ b/pages/initiatives.html
@@ -23,12 +23,12 @@
         <!-- Header -->
         <img src="../rsc/Georgian_College_logo.svg" alt="Georgian college logo" class="logo m-3">
         <nav>
-            <a href="#" class="badge rounded-pill">Initiatives</a>
-            <a href="#" class="badge rounded-pill">Emissions Map</a>
-            <a href="#" class="badge rounded-pill">Resources</a>
+            <a href="initiatives.html" class="badge rounded-pill">Initiatives</a>
+            <a href="data.html" class="badge rounded-pill">Emissions Map</a>
+            <a href="resources.html" class="badge rounded-pill">Resources</a>
             <a href="#" class="badge rounded-pill">Blog</a>
             <a href="#" class="badge rounded-pill">About</a>
-            <a href="#" class="badge rounded-pill">Contact Us</a>
+            <a href="contact.html" class="badge rounded-pill">Contact Us</a>
         </nav>
     </header>
 
@@ -60,13 +60,14 @@
             <div class="col" id="initiativesPart2">
                 <h3>Local Ingredients, Local Vendors</h3>
                 <div id="initiativesPart2Text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus a rerum voluptates beatae
-                    sint iste eaque iusto! Veniam dolor possimus illum obcaecati non magni et architecto, repudiandae,
-                    debitis beatae blanditiis.</p>
-                <p>Quam excepturi nemo consectetur. Ea eum tempore nostrum consectetur omnis, reiciendis autem quam
-                    ullam explicabo vitae, fugit molestias sint distinctio eius! Laborum, fugiat. Quibusdam pariatur
-                    quam fugiat blanditiis ab tempore?</p>
-                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus a rerum voluptates beatae
+                        sint iste eaque iusto! Veniam dolor possimus illum obcaecati non magni et architecto,
+                        repudiandae,
+                        debitis beatae blanditiis.</p>
+                    <p>Quam excepturi nemo consectetur. Ea eum tempore nostrum consectetur omnis, reiciendis autem quam
+                        ullam explicabo vitae, fugit molestias sint distinctio eius! Laborum, fugiat. Quibusdam pariatur
+                        quam fugiat blanditiis ab tempore?</p>
+                </div>
             </div>
         </div>
     </main>
