--- a/pages/map.html
+++ b/pages/map.html
@@ -23,12 +23,12 @@
         <!-- Header -->
         <img src="../rsc/Georgian_College_logo.svg" alt="Georgian college logo" class="logo m-3">
         <nav>
-            <a href="#" class="badge rounded-pill">Initiatives</a>
-            <a href="#" class="badge rounded-pill">Emissions Map</a>
-            <a href="#" class="badge rounded-pill">Resources</a>
-            <a href="#" class="badge rounded-pill">Blog</a>
-            <a href="#" class="badge rounded-pill">About</a>
-            <a href="#" class="badge rounded-pill">Contact Us</a>
+<a href="initiatives.html" class="badge rounded-pill">Initiatives</a>
+<a href="data.html" class="badge rounded-pill">Emissions Map</a>
+<a href="resources.html" class="badge rounded-pill">Resources</a>
+<a href="#" class="badge rounded-pill">Blog</a>
+<a href="#" class="badge rounded-pill">About</a>
+<a href="contact.html" class="badge rounded-pill">Contact Us</a>
         </nav>
     </header>
 
