--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,6 +37,18 @@
             <h2 class="col">Contact Us</h2>
         </div>
         <div class="row">
+            <div class="col">
+                <form>
+                    <label for="sendername">Your Name</label>
+                    <input type="text" name="sendername" id="sendername" required="true">
+                    <label for="sendername">Your E-mail Address</label>
+                    <input type="email" name="senderemail" id="senderemail">
+                    <textarea name="message" id="message" cols="40" rows="10" placeholder="Your message here..." required="true"></textarea>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <button type="submit" class="submit">Send</button><button type="reset" class="reset">Reset</button>
         </div>
     </main>
     <footer class="sticky-bottom">
