--- a/pages/map.html
+++ b/pages/map.html
@@ -49,7 +49,9 @@
             </p>
         </div>
     </div>
-    <div id="emissionsMap"></div>
+    <div id="emissionsMap">
+        
+    </div>
     </main>
     <footer class="sticky-bottom">
         <div class="badge rounded-pill">Twitter</div>
