--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,16 +39,15 @@
         <div class="row">
             <div class="col">
                 <form>
-                    <label for="sendername">Your Name</label>
+                    <label for="sendername">Your Name (required)</label>
                     <input type="text" name="sendername" id="sendername" required="true">
                     <label for="sendername">Your E-mail Address</label>
                     <input type="email" name="senderemail" id="senderemail">
                     <textarea name="message" id="message" cols="40" rows="10" placeholder="Your message here..." required="true"></textarea>
                 </form>
+                <div id="buttons"><button type="submit" class="submit">Send</button>
+                <button type="reset" class="reset">Reset</button></div>
             </div>
-        </div>
-        <div class="row">
-            <button type="submit" class="submit">Send</button><button type="reset" class="reset">Reset</button>
         </div>
     </main>
     <footer class="sticky-bottom">
