--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,8 +45,10 @@
                     <input type="email" name="senderemail" id="senderemail">
                     <textarea name="message" id="message" cols="40" rows="10" placeholder="Your message here..." required="true"></textarea>
                 </form>
-                <div id="buttons"><button type="submit" class="submit">Send</button>
-                <button type="reset" class="reset">Reset</button></div>
+                <div id="buttons">
+                    <button type="submit" class="submit">Send</button>
+                    <button type="reset" class="reset">Reset</button>
+                </div>
             </div>
         </div>
     </main>
