Added margin to header on small screens

--- a/pages/map.html
+++ b/pages/map.html
@@ -22,7 +22,7 @@
     <header>
         <!-- Header -->
         <img src="../rsc/Georgian_College_logo.svg" alt="Georgian college logo" class="logo m-3">
-        <nav>
+        <nav class="mb-2 mb-lg-0">
 <a href="initiatives.html" class="badge rounded-pill">Initiatives</a>
 <a href="data.html" class="badge rounded-pill">Emissions Map</a>
 <a href="resources.html" class="badge rounded-pill">Resources</a>
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div id="emissionsMap">
-        
+
     </div>
     </main>
     <footer class="sticky-bottom">
